2010-04-01  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am (src_libmingwex32): Added intrincs/_rotl64.c and
	intrincs/_rotr64.c to 32 bit libmingwex.a builds.
	(src_libmingwex64): Add intrincs/_rotl64.c and intrincs/_rotr64.c
	to 64 bit libmingwex.a builds, too, for now.
	* Makefile.in: Regenerated.

2010-04-01  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/_rotl64.c: New.
	* intrincs/_rotr64.c: New.

2010-03-31  Kai Tietz  <kai.tietz@onevision.com>

	* misc/wassert.c (_assert): Add Ascii version.

2010-03-26  Doug Semler  <dougsemler@gmail.com>

	* Makefile.am (misc/delay-n.c, misc/delay-f.c): Add to libmingwex.a library.
	* misc/delay-f.c: New.
	* misc/delay-n.c: New.
	* Makefile.in: Regenerated.

2010-03-18  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Added lib64/wsock32.def to build.
	* Makefile.in: Regenerated.

2010-03-18  Ozkan Sezer  <sezeroz@gmail.com>

	* lib64/wsock32.def: New.

2010-03-16  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/wassert.c (_wassert): Spelling fix: s/Assertation/Assertion/.

2010-03-13  Kai Tietz  <kai.tietz@onevision.com>

	* math/cossin.c: New.

2010-03-03  Ozkan Sezer  <sezeroz@gmail.com>

	* aclocal.m4 (_LT_CHECK_MAGIC_METHOD): The latest libtool.m4 w64
	fix from the libtool git repository applied.
	* configure: Likewise.
	* ltmain.sh (func_win32_libid): Update from the libtool git repo.

2010-02-19  Jonathan Yong  <jon_y@sourceforge.net>

	* libsrc/shell32.c (CLSID_ShellFSFolder): Define.
	(IID_IShellLinkDataList): Define.

2010-02-19  Jonathan Yong  <jon_y@sourceforge.net>

	* libsrc/shell32.c (IID_IFolderView): Define.

2010-02-16  Ozkan Sezer  <sezeroz@gmail.com>

	sync getopt.c with src/winsup/cygwin/libc/getopt.c r1.13 (Dec 14, 2009):
	* misc/getopt.c (getopt_internal): Set optreset according to optind
	setting earlier.  Reevaluate POSIXLY_CORRECT if optreset is set to !0.
	Handle a leading '-' in options independently of posixly_correct.

2010-02-10  Ozkan Sezer  <sezeroz@gmail.com>
